<?xml version="1.0"?>
<package format="2">
  <name>frlab_final_project_templates</name>
  <version>0.0.1</version>
  <description>gazebo templates for simulation of frlab final project</description>

  <maintainer email="mik-p@github.com">mik p</maintainer>

  <license>MIT</license>

  <author email="mik-p@github.com">mik p</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>

  <exec_depend>turtlebot3_gazebo</exec_depend>
</package>
